# logos-package

./: .gitignore  CMakeLists.txt  README.md  flake.nix  result-lgx
.github/workflows/: ci.yml  doctests.yml
docs/: project.md  spec.md
doctests/: lgx-cli.test.yaml  lgx-signing.test.yaml  run.sh
doctests/outputs/: lgx-cli.md  lgx-signing.md
include/lgx/: lgx.h
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
nix/: all.nix  bin.nix  default.nix  lib.nix
pr-26/: index.html
pr-26/macos-latest/: index.html
pr-26/ubuntu-latest/: index.html
pr-27/: index.html
pr-27/macos-latest/: index.html
pr-27/ubuntu-latest/: index.html
pr-28/: index.html
pr-28/macos-latest/: index.html
pr-28/ubuntu-latest/: index.html
pr-29/: index.html
pr-29/macos-latest/: index.html
pr-29/ubuntu-latest/: index.html
scripts/: check-bundle-refs.sh  check-nix-refs.sh
src/: lgx.h  lib.cpp  main.cpp
src/commands/: add_command.cpp  add_command.h  command.cpp  command.h  create_command.cpp  create_command.h  extract_command.cpp  extract_command.h  keygen_command.cpp  keygen_command.h  keyring_command.cpp  keyring_command.h  manifest_command.cpp  manifest_command.h  merge_command.cpp  merge_command.h  publish_command.cpp  publish_command.h  remove_command.cpp  remove_command.h  sign_command.cpp  sign_command.h  signature_command.cpp  signature_command.h  verify_command.cpp  verify_command.h
src/core/: gzip_handler.cpp  gzip_handler.h  manifest.cpp  manifest.h  package.cpp  package.h  path_normalizer.cpp  path_normalizer.h  tar_reader.cpp  tar_reader.h  tar_writer.cpp  tar_writer.h
src/crypto/: keyring.cpp  keyring.h  manifest_sig.cpp  manifest_sig.h  signing.cpp  signing.h
tests/: CMakeLists.txt  test_cli.cpp  test_crypto.cpp  test_gzip_handler.cpp  test_lib.cpp  test_manifest.cpp  test_package.cpp  test_path_normalizer.cpp  test_tar_reader.cpp  test_tar_writer.cpp
